--- a/09-classwork/09-scraping-congress-bulk-Soma.ipynb
+++ b/09-classwork/09-scraping-congress-bulk-Soma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
+       "      <th>name_raw</th>\n",
        "      <th>slug</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -72,7 +72,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                name                      slug\n",
+       "                            name_raw                      slug\n",
        "0              Senator Abdnor, James      james-abdnor/A000009\n",
        "1   Representative Abercrombie, Neil  neil-abercrombie/A000014\n",
        "2            Senator Abourezk, James    james-abourezk/A000017\n",
@@ -80,7 +80,7 @@
        "4           Senator Abraham, Spencer   spencer-abraham/A000355"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
     "df = pd.read_csv(\"congress.csv\")\n",
     "# Removing the URL column just to make things harder for us\n",
     "# (BUT THE THINGS WE'LL LEARN!!!)\n",
-    "df = df.drop(columns='url')\n",
+    "df = df.drop(columns='link')\n",
     "df.head()"
    ]
   },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -144,27 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<span>In Congress 1973 - 1987</span>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find class='birthdate', then find the next span tag\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +162,7 @@
        "'\\n\\r\\n                    1-100                \\r\\n                of 1,949            '"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -236,16 +225,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_raw</th>\n",
+       "      <th>slug</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Senator Abdnor, James</td>\n",
+       "      <td>james-abdnor/A000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Representative Abercrombie, Neil</td>\n",
+       "      <td>neil-abercrombie/A000014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Senator Abourezk, James</td>\n",
+       "      <td>james-abourezk/A000017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Representative Abraham, Ralph Lee</td>\n",
+       "      <td>ralph-abraham/A000374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Senator Abraham, Spencer</td>\n",
+       "      <td>spencer-abraham/A000355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Representative Abzug, Bella S.</td>\n",
+       "      <td>bella-abzug/A000018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Representative Acevedo-Vila, Anibal</td>\n",
+       "      <td>anibal-acevedo-vila/A000359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Representative Ackerman, Gary L.</td>\n",
+       "      <td>gary-ackerman/A000022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Representative Adams, Alma S.</td>\n",
+       "      <td>alma-adams/A000370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Senator Adams, Brock</td>\n",
+       "      <td>brockman-adams/A000031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(10, 2)"
+       "                              name_raw                         slug\n",
+       "0                Senator Abdnor, James         james-abdnor/A000009\n",
+       "1     Representative Abercrombie, Neil     neil-abercrombie/A000014\n",
+       "2              Senator Abourezk, James       james-abourezk/A000017\n",
+       "3    Representative Abraham, Ralph Lee        ralph-abraham/A000374\n",
+       "4             Senator Abraham, Spencer      spencer-abraham/A000355\n",
+       "5       Representative Abzug, Bella S.          bella-abzug/A000018\n",
+       "6  Representative Acevedo-Vila, Anibal  anibal-acevedo-vila/A000359\n",
+       "7     Representative Ackerman, Gary L.        gary-ackerman/A000022\n",
+       "8        Representative Adams, Alma S.           alma-adams/A000370\n",
+       "9                 Senator Adams, Brock       brockman-adams/A000031"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scrape_page(row):\n",
     "    # These both work the same\n",
-    "    url = f\"https://www.congress.gov/member/\" + row['slug']\n",
+    "    # url = f\"https://www.congress.gov/member/\" + row['slug']\n",
     "    url = f\"https://www.congress.gov/member/{row['slug']}\"\n",
     "    # Print out the 'slug' column\n",
     "    # print(\"Scraping\", row['slug'])\n",
@@ -272,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +374,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +450,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +481,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
